# unitree_go1_simulator

./: CMakeLists.txt  LICENSE  package.xml
config/: joint_state.yaml  unitree_go1_champ.yaml
launch/: champ_unitree_go1.launch.py  simulate_unitree_go1.launch.py
src/: joint_trajectory_update_timestamp_node.cpp
worlds/ignition/: checker_ground_plane_with_obstacle.sdf
