<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unitree_go1_simulator</name>
  <version>0.1.1</version>
  <description>
    This package is for simulating Unitree Go1 robots on the Ignition Gazebo
  </description>
  <maintainer email="naoki.takahashi060@gmail.com">Naoki Takahashi</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>gz-fuel_tools8</build_depend>
  <exec_depend>unitree_go1_description</exec_depend>
  <exec_depend>champ</exec_depend>
  <exec_depend>champ_base</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
